# aidoku-manga18fx

./: Cargo.toml  README.md  build.yml  gitignore
aidoku-manga18fx/src/: lib.re  source.json
src/: lib.rs
