[package]
name = "manga18fx"
version = "1.0.0"
edition = "2021"

[lib]
name = "lib.rs"
path = "src/lib.rs"  # Change this to your actual file name
crate-type = ["cdylib"]

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs" }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
